--- a/blogpost page.html
+++ b/blogpost page.html
@@ -66,39 +66,39 @@ ul.breadcrumb li a:hover {
             <!-- Photo Grid -->
 <div class="row"> 
     <div class="column">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-1.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-2.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-4.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-5.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-6.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-8.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-7.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\1-1.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\1-2.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\1-4.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\1-5.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\1-6.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\1-8.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\1-7.jpg" style="width:100%">
     </div>
     <div class="column">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\2-10.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\2-11.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-1.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-2.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-3.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-4.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\2-10.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\2-11.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\4-1.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\4-2.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\4-3.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\4-4.jpg" style="width:100%">
     </div>  
     <div class="column">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-5.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-6.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\5-2.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-7.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-8.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-9.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\5-4.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\4-5.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\4-6.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\5-2.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\4-7.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\4-8.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\blog-9.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\5-4.jpg" style="width:100%">
     </div>
     <div class="column">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-10.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-11.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-12.jpg" style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\gw-1.jpg"    style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-4.jpg"  style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-7.jpg"  style="width:100%">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\doughnuts-donuts.webp"  style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\blog-10.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\blog-11.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\blog-12.jpg" style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\gw-1.jpg"    style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\blog-4.jpg"  style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\blog-7.jpg"  style="width:100%">
+    <img src="ballerina-cakes-main\cakeshop images\doughnuts-donuts.webp"  style="width:100%">
   </div>
 </div>
         </body>
