--- a/cakepage.html
+++ b/cakepage.html
@@ -75,7 +75,7 @@ ul.breadcrumb li a:hover {
     </style>
     <body>
  <h1><i>Cakes</i></h1> 
- <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\divider_1.png" alt = "divider" class ="img1"> 
+ <img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider" class ="img1"> 
  <ul class="breadcrumb">
   <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
   <li><a href="#">Cake</a></li>
@@ -84,18 +84,18 @@ ul.breadcrumb li a:hover {
  <aside>
   <p><i>Welcome to the world of Cake's</i></p>
      </aside>
-     <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\about_img2-removebg-preview.png" alt ="about_img2-removebg-preview" class = "img2">
+     <img src = "ballerina-cakes-main\cakeshop images\about_img2-removebg-preview.png" alt ="about_img2-removebg-preview" class = "img2">
  <br><br><br><br>
  <div class="scroll-container">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\about_img3.jpg" alt="img3" width="472" height="300">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\about_img4.jpg" alt="img4" width="473" height="300">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\about_img2.jpg" alt="img2" width="472" height="300">
+    <img src="ballerina-cakes-main\cakeshop images\about_img3.jpg" alt="img3" width="472" height="300">
+    <img src="ballerina-cakes-main\cakeshop images\about_img4.jpg" alt="img4" width="473" height="300">
+    <img src="ballerina-cakes-main\cakeshop images\about_img2.jpg" alt="img2" width="472" height="300">
   </div>
   <br><br>
   <div class="scroll-container1">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\service2.jpg" alt="service2" width="472" height="300">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\service1.jpg" alt="service1" width="473" height="300">
-    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\service3.jpg" alt="service3" width="472" height="300">
+    <img src="ballerina-cakes-main\cakeshop images\service2.jpg" alt="service2" width="472" height="300">
+    <img src="ballerina-cakes-main\cakeshop images\service1.jpg" alt="service1" width="473" height="300">
+    <img src="ballerina-cakes-main\cakeshop images\service3.jpg" alt="service3" width="472" height="300">
   </div> 
   
     </body>
