--- a/cart page.html
+++ b/cart page.html
@@ -2,7 +2,7 @@
     <head>
         <title>cart</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="ballerina-cakes-main/4.7.0/css/font-awesome.min.css">
 <style>
 body {
 background-color:  #df9fbf;
