--- a/contactpage.html
+++ b/contactpage.html
@@ -97,10 +97,10 @@ ul.breadcrumb li a:hover {
   <li><a href="#">Contact</a></li>
 </ul>
 <br><br><br><br>
-<img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
+<img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
 <h2><i>Our Contacts</i></h2>
 <br><br>
-<img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\icon-devider-gray.png" alt = "divider_1" class = "img2">
+<img src = "ballerina-cakes-main\cakeshop images\icon-devider-gray.png" alt = "divider_1" class = "img2">
 <h3><i>Send Message</i></h3>
 <br><br>
 <div class="container">
