--- a/donutpage.html
+++ b/donutpage.html
@@ -24,7 +24,7 @@ margin-left: 680px;;
         }
 
      .bg {
-background-image: url("file:///C:/Users/yachi/OneDrive/Pictures/cakeshop%20images/doughnuts-donuts.webp");
+background-image: url("ballerina-cakes-main/cakeshop%20images/doughnuts-donuts.webp");
 height: 100%;
 background-position: center;
 background-repeat: no-repeat;
@@ -107,7 +107,7 @@ ul.breadcrumb li a:hover {
     </style>
     <body>
         <h1><i>Donut's</i></h1>
-        <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\slider_bg_4.png" alt = "divider_2_light" class = "img1">
+        <img src = "ballerina-cakes-main\cakeshop images\slider_bg_4.png" alt = "divider_2_light" class = "img1">
         <ul class="breadcrumb">
           <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
           <li><a href="#">Donut</a></li>
@@ -119,8 +119,8 @@ ul.breadcrumb li a:hover {
 
             <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\pr-table1.png">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\pr-table1.png" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\pr-table1.png">
+                    <img src="ballerina-cakes-main\cakeshop images\pr-table1.png" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>blueberry scotch</i></div>
                 </div>
@@ -128,8 +128,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\pr-table2.png">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\pr-table2.png" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\pr-table2.png">
+                    <img src="ballerina-cakes-main\cakeshop images\pr-table2.png" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>delight bun</i></div>
                 </div>
@@ -137,8 +137,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\pr-table3.png">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\pr-table3.png" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\pr-table3.png">
+                    <img src="ballerina-cakes-main\cakeshop images\pr-table3.png" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>strwaberry creme</i></div>
                 </div>
@@ -146,8 +146,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\pr-table4.png">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\pr-table4.png" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\pr-table4.png">
+                    <img src="ballerina-cakes-main\cakeshop images\pr-table4.png" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>truffle scotch</i></div>
                 </div>
