--- a/icecreampage.html
+++ b/icecreampage.html
@@ -128,7 +128,7 @@ ul.breadcrumb li a:hover {
     </style>
     <body>
         <h1><i>Ice-Creams</i></h1>
-        <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\divider_5.png" alt = "divider_5" class = "img1">
+        <img src = "ballerina-cakes-main\cakeshop images\divider_5.png" alt = "divider_5" class = "img1">
         <ul class="breadcrumb">
           <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
           <li><a href="#">Ice cream</a></li>
@@ -136,15 +136,15 @@ ul.breadcrumb li a:hover {
         <br><br><br><br>
         <div class="row">
             <div class="column">
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\1ice-1.jpg-removebg-preview.png" alt = "ice-cream-1" style="width:100%">
+            <img src = "ballerina-cakes-main\cakeshop images\1ice-1.jpg-removebg-preview.png" alt = "ice-cream-1" style="width:100%">
             <h3><i>Coffee ice creame</i></h3>
             </div>
            <div class="column">
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\ice-cream-2-removebg-preview.png" alt = "ice-cream-2" style="width:100%">
+            <img src = "ballerina-cakes-main\cakeshop images\ice-cream-2-removebg-preview.png" alt = "ice-cream-2" style="width:100%">
             <h3><i>Fruit ice creame</i></h3>
            </div>
            <div class="column">
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\ice-cream-3-removebg-preview.png" alt =  "ice-cream-3" style="width:100%">
+            <img src = "ballerina-cakes-main\cakeshop images\ice-cream-3-removebg-preview.png" alt =  "ice-cream-3" style="width:100%">
             <h3><i>Mix ice creame</i></h3>
            </div>
            </div>
@@ -155,8 +155,8 @@ ul.breadcrumb li a:hover {
 
 <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-1.jpg">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-1.jpg" alt="Cinque Terre" width="600" height="400">
+      <a target="_blank" href="ballerina-cakes-main\cakeshop images\4-1.jpg">
+        <img src="ballerina-cakes-main\cakeshop images\4-1.jpg" alt="Cinque Terre" width="600" height="400">
       </a>
       <div class="desc"><i>lime candy</i></div>
     </div>
@@ -165,8 +165,8 @@ ul.breadcrumb li a:hover {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-2.jpg">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-2.jpg" alt="Forest" width="600" height="400">
+      <a target="_blank" href="ballerina-cakes-main\cakeshop images\4-2.jpg">
+        <img src="ballerina-cakes-main\cakeshop images\4-2.jpg" alt="Forest" width="600" height="400">
       </a>
       <div class="desc"><i>swiss cone</i></div>
     </div>
@@ -174,8 +174,8 @@ ul.breadcrumb li a:hover {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-3.jpg">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-3.jpg" alt="Northern Lights" width="600" height="400">
+      <a target="_blank" href="ballerina-cakes-main\cakeshop images\4-3.jpg">
+        <img src="ballerina-cakes-main\cakeshop images\4-3.jpg" alt="Northern Lights" width="600" height="400">
       </a>
       <div class="desc"><i>raspberry candy</i></div>
     </div>
@@ -183,8 +183,8 @@ ul.breadcrumb li a:hover {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-4.jpg">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-4.jpg" alt="Mountains" width="600" height="400">
+      <a target="_blank" href="ballerina-cakes-main\cakeshop images\4-4.jpg">
+        <img src="ballerina-cakes-main\cakeshop images\4-4.jpg" alt="Mountains" width="600" height="400">
       </a>
       <div class="desc"><i>pistacheos sundaes</i></div>
     </div>
@@ -192,8 +192,8 @@ ul.breadcrumb li a:hover {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-5.jpg">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-5.jpg" alt="Cinque Terre" width="600" height="400">
+      <a target="_blank" href="ballerina-cakes-main\cakeshop images\4-5.jpg">
+        <img src="ballerina-cakes-main\cakeshop images\4-5.jpg" alt="Cinque Terre" width="600" height="400">
       </a>
       <div class="desc"><i>walnut mint creme sundaes</i></div>
     </div>
@@ -202,8 +202,8 @@ ul.breadcrumb li a:hover {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-6.jpg">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-6.jpg" alt="Forest" width="600" height="400">
+      <a target="_blank" href="ballerina-cakes-main\cakeshop images\4-6.jpg">
+        <img src="ballerina-cakes-main\cakeshop images\4-6.jpg" alt="Forest" width="600" height="400">
       </a>
       <div class="desc"><i>choco sundaes</i></div>
     </div>
@@ -211,8 +211,8 @@ ul.breadcrumb li a:hover {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-7.jpg">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-7.jpg" alt="Northern Lights" width="600" height="400">
+      <a target="_blank" href="ballerina-cakes-main\cakeshop images\4-7.jpg">
+        <img src="ballerina-cakes-main\cakeshop images\4-7.jpg" alt="Northern Lights" width="600" height="400">
       </a>
       <div class="desc"><i>matcha sundaes</i></div>
     </div>
@@ -220,8 +220,8 @@ ul.breadcrumb li a:hover {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-8.jpg">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4-8.jpg" alt="Mountains" width="600" height="400">
+      <a target="_blank" href="ballerina-cakes-main\cakeshop images\4-8.jpg">
+        <img src="ballerina-cakes-main\cakeshop images\4-8.jpg" alt="Mountains" width="600" height="400">
       </a>
       <div class="desc"><i>mint sundaes</i></div>
     </div>
@@ -229,7 +229,7 @@ ul.breadcrumb li a:hover {
 
   <div class="responsive">
     <div class="gallery">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\icecream_01.png" alt="Mountains" width="600" height="400">
+        <img src="ballerina-cakes-main\cakeshop images\icecream_01.png" alt="Mountains" width="600" height="400">
       <div class="desc"><i>Small box</i></div>
       <div class="desc1"><b>$15</b></div>
     </div>
@@ -237,7 +237,7 @@ ul.breadcrumb li a:hover {
 
   <div class="responsive">
     <div class="gallery">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\icecream_02.png" alt="Mountains" width="600" height="400">
+        <img src="ballerina-cakes-main\cakeshop images\icecream_02.png" alt="Mountains" width="600" height="400">
       <div class="desc"><i>Medium box</i></div>
       <div class="desc1"><b>$35</b></div>
     </div>
@@ -245,7 +245,7 @@ ul.breadcrumb li a:hover {
 
   <div class="responsive">
     <div class="gallery">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\icecream_03.png" alt="Mountains" width="600" height="400">
+        <img src="ballerina-cakes-main\cakeshop images\icecream_03.png" alt="Mountains" width="600" height="400">
       <div class="desc"><i>Assorty box</i></div>
       <div class="desc1"><b>$55</b></div>
     </div>
@@ -253,7 +253,7 @@ ul.breadcrumb li a:hover {
 
   <div class="responsive">
     <div class="gallery">
-        <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\icecream_04.png" alt="Mountains" width="600" height="400">
+        <img src="ballerina-cakes-main\cakeshop images\icecream_04.png" alt="Mountains" width="600" height="400">
       <div class="desc"><i>Big box</i></div>
       <div class="desc1"><b>$75</b></div>
     </div>
