--- a/macaronpage.html
+++ b/macaronpage.html
@@ -55,7 +55,7 @@
         }
 
      .bg {
-background-image: url("file:///C:/Users/yachi/OneDrive/Pictures/cakeshop%20images/5-11.jpg");
+background-image: url("ballerina-cakes-main/cakeshop%20images/5-11.jpg");
 height: 100%;
 background-position: center;
 background-repeat: no-repeat;
@@ -87,7 +87,7 @@ ul.breadcrumb li a:hover {
         </style>
         <body>
             <h1><i>Macaron's</i></h1>
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\divider_6 (1).png" alt = "divider6" class = "img1">
+            <img src = "ballerina-cakes-main\cakeshop images\divider_6 (1).png" alt = "divider6" class = "img1">
             <ul class="breadcrumb">
                 <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
                 <li><a href="#">Macaroon</a></li>
@@ -95,29 +95,29 @@ ul.breadcrumb li a:hover {
          <aside>
          <p><i>Welcome to the world of macaron's</i></p>
             </aside>
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\image-2.png" alt ="image-2" class = "img2">
+            <img src = "ballerina-cakes-main\cakeshop images\image-2.png" alt ="image-2" class = "img2">
             <br><br><br><br><br>
 <div  class="mycontainer">
     <div>
-    <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\macarons1.png" alt =  "macaron1">
+    <img src = "ballerina-cakes-main\cakeshop images\macarons1.png" alt =  "macaron1">
     <h3>Org Macaron's</h3>
     </div>
    <div>
-    <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\macarons2.png" alt =  "macaron2">
+    <img src = "ballerina-cakes-main\cakeshop images\macarons2.png" alt =  "macaron2">
     <h3>Flower Macaron's</h3>
    </div>
    <div>
-    <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\macarons3.png" alt =  "macaron3">
+    <img src = "ballerina-cakes-main\cakeshop images\macarons3.png" alt =  "macaron3">
     <h3>Fasion Macaron's</h3>
    </div>
    <div>
-    <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\macarons4.png" alt =  "macaron4">
+    <img src = "ballerina-cakes-main\cakeshop images\macarons4.png" alt =  "macaron4">
     <h3>Macaron's Mix</h3>
    </div>
 </div>
 <br><br><br><br>
 <div class = "bg">
-    <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\image-1.png" alt = "image-1" class = "img3"> 
+    <img src = "ballerina-cakes-main\cakeshop images\image-1.png" alt = "image-1" class = "img3"> 
     <aside>
         <p><i>Any Design for your Feast-Day</i></p>
         <p style = "margin-left:200px;">Order Now</p>
