--- a/htmlwave.html
+++ b/htmlwave.html
@@ -417,12 +417,12 @@ margin-right: 10px;
     <div class="dropdown">
     <a  class="dropbtn">Home</a>
     <div class="dropdown-content">
-      <a href="file:///C:/Users/yachi/Downloads/cakepage.html">Cakes</a>
-      <a href="file:///C:/Users/yachi/Downloads/weddingpage.html">Wedding</a>
-      <a href="file:///C:/Users/yachi/Downloads/LOLLIPOPPAGE.html">Lollipops</a>
-      <a href="file:///C:/Users/yachi/Downloads/icecreampage.html">Ice-cream</a>
-      <a href="file:///C:/Users/yachi/Downloads/macaronpage.html">Macaron</a>
-      <a href="file:///C:/Users/yachi/Downloads/donutpage.html">Donuts</a>
+      <a href="ballerina-cakes-main/cakepage.html">Cakes</a>
+      <a href="ballerina-cakes-main/weddingpage.html">Wedding</a>
+      <a href="ballerina-cakes-main/LOLLIPOPPAGE.html">Lollipops</a>
+      <a href="ballerina-cakes-main/icecreampage.html">Ice-cream</a>
+      <a href="ballerina-cakes-main/macaronpage.html">Macaron</a>
+      <a href="ballerina-cakes-main/donutpage.html">Donuts</a>
 
       </div>
     </div>
@@ -430,34 +430,34 @@ margin-right: 10px;
     <div class="dropdown">
     <a  class="dropbtn">Pages</a>
     <div class="dropdown-content">
-      <a href="file:///C:/Users/yachi/Downloads/aboutus.html">About us</a>
-      <a href="file:///C:/Users/yachi/Downloads/our%20staff%20page.html">Our Staff</a>
-      <a href="file:///C:/Users/yachi/Downloads/recipiepagee.html">Recipes Grid</a>
+      <a href="ballerina-cakes-main/aboutus.html">About us</a>
+      <a href="ballerina-cakes-main/our%20staff%20page.html">Our Staff</a>
+      <a href="ballerina-cakes-main/recipiepagee.html">Recipes Grid</a>
       </div>
     </div>
     <br>
     <div class="dropdown">
     <a  class="dropbtn">Portfolio</a>
     <div class="dropdown-content">
-      <a href="file:///C:/Users/yachi/Downloads/blogpost%20page.html">blogpost</a>
+      <a href="ballerina-cakes-main/blogpost%20page.html">blogpost</a>
       </div>
     </div>
     <br>
     <div class="dropdown">
     <a  class="dropbtn">Blog</a>
     <div class="dropdown-content">
-      <a href="file:///C:/Users/yachi/Downloads/checkerboard%20page.html">Checkersboard</a>
-      <a href="file:///C:/Users/yachi/Downloads/masonry.html">Masonry</a>
+      <a href="ballerina-cakes-main/checkerboard%20page.html">Checkersboard</a>
+      <a href="ballerina-cakes-main/masonry.html">Masonry</a>
       </div>
     </div>
     <br>
     <div class="dropdown">
     <a  class="dropbtn">Shops</a>
     <div class="dropdown-content">
-      <a href="file:///C:/Users/yachi/Downloads/shopspage.html">Shop</a>
-      <a href="file:///C:/Users/yachi/Downloads/cart%20page.html">Cart</a>
-      <a href="file:///C:/Users/yachi/Downloads/checkoutpage.html">Checkout</a>
-      <a href="file:///C:/Users/yachi/Downloads/loginpage.html">My Account</a>
+      <a href="ballerina-cakes-mains/shopspage.html">Shop</a>
+      <a href="ballerina-cakes-main/cart%20page.html">Cart</a>
+      <a href="ballerina-cakes-main/checkoutpage.html">Checkout</a>
+      <a href="ballerina-cakes-main/loginpage.html">My Account</a>
       </div>
     </div>
     <br>
