--- a/LOLLIPOPPAGE.html
+++ b/LOLLIPOPPAGE.html
@@ -111,7 +111,7 @@ ul.breadcrumb li a:hover {
         <h1><i>lollipop's</i></h1>
         <img src = "ballerina-cakes-main\cakeshop images\divider_2_light.png" alt = "divider_2_light" class = "img1">
         <ul class="breadcrumb">
-          <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+          <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
           <li><a href="#">Lollipop</a></li>
         </ul>
         <br><br>
