--- a/aboutus.html
+++ b/aboutus.html
@@ -98,7 +98,7 @@ ul.breadcrumb li a:hover {
         <body>
             <h1><i>About Us</i></h1>
             <ul class="breadcrumb">
-                <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+                <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
                 <li><a href="#">About us</a></li>
               </ul>
             <br><br><br><br>
