--- a/blogpost page.html
+++ b/blogpost page.html
@@ -59,7 +59,7 @@ ul.breadcrumb li a:hover {
         <body>
             <h1><i>BlogPost</i></h1>
             <ul class="breadcrumb">
-              <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+              <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
               <li><a href="#">Blogpost</a></li>
             </ul>
             <br><br><br><br>
