--- a/cakepage.html
+++ b/cakepage.html
@@ -77,7 +77,7 @@ ul.breadcrumb li a:hover {
  <h1><i>Cakes</i></h1> 
  <img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider" class ="img1"> 
  <ul class="breadcrumb">
-  <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+  <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
   <li><a href="#">Cake</a></li>
 </ul>
  <br><br>
