--- a/checkerboard page.html
+++ b/checkerboard page.html
@@ -83,7 +83,7 @@ ul.breadcrumb li a:hover {
         <body>
             <h1><i>Checkerboard</i></h1>
             <ul class="breadcrumb">
-                <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+                <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
                 <li><a href="#">Checkerboard</a></li>
               </ul>
             <br><br><br><br>
