--- a/checkoutpage.html
+++ b/checkoutpage.html
@@ -143,7 +143,7 @@ ul.breadcrumb li a:hover {
         <body>
 <h1><i>Checkout</i></h1>
 <ul class="breadcrumb">
-  <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+  <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
   <li><a href="#">Checkout</a></li>
 </ul>
 <br><br><br><br>
