--- a/htmlwave.html
+++ b/htmlwave.html
@@ -410,7 +410,7 @@ margin-right: 10px;
 </head>
 <body>
 <div class="parent">
-<img class="image1" src ="C:\Users\yachi\Downloads\wave (2).svg" alt ="wave">
+<img class="image1" src ="ballerina-cakes-main\cakeshop images\wave (2).svg" alt ="wave">
 <img class="image2" src = "ballerina-cakes-main/cakeshop%20images/logo.png" alt="logo">
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -462,7 +462,7 @@ margin-right: 10px;
     </div>
     <br>
     <div class="dropdown">
-    <a class="dropbtn" href = "file:///C:/Users/yachi/Downloads/contactpage.html" >Contacts</a>
+    <a class="dropbtn" href = "ballerina-cakes-main/contactpage.html" >Contacts</a>
     </div>
     </div>
     
