--- a/icecreampage.html
+++ b/icecreampage.html
@@ -130,7 +130,7 @@ ul.breadcrumb li a:hover {
         <h1><i>Ice-Creams</i></h1>
         <img src = "ballerina-cakes-main\cakeshop images\divider_5.png" alt = "divider_5" class = "img1">
         <ul class="breadcrumb">
-          <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+          <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
           <li><a href="#">Ice cream</a></li>
         </ul>
         <br><br><br><br>
