--- a/macaronpage.html
+++ b/macaronpage.html
@@ -89,7 +89,7 @@ ul.breadcrumb li a:hover {
             <h1><i>Macaron's</i></h1>
             <img src = "ballerina-cakes-main\cakeshop images\divider_6 (1).png" alt = "divider6" class = "img1">
             <ul class="breadcrumb">
-                <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+                <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
                 <li><a href="#">Macaroon</a></li>
               </ul>
          <aside>
