--- a/recipiepagee.html
+++ b/recipiepagee.html
@@ -127,7 +127,7 @@ ul.breadcrumb li a:hover {
             <h1><i>Recipes</i></h1>
             <img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
             <ul class="breadcrumb">
-              <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+              <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
               <li><a href="#">Recipe</a></li>
             </ul>
             <br><br><br><br>
