--- a/shopspage.html
+++ b/shopspage.html
@@ -87,7 +87,7 @@ ul.breadcrumb li a:hover {
         <body>
             <h1><i>Shops</i></h1>
             <ul class="breadcrumb">
-              <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+              <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
               <li><a href="#">Shop</a></li>
             </ul>
             <br><br><br><br>
