--- a/weddingpage.html
+++ b/weddingpage.html
@@ -121,7 +121,7 @@ ul.breadcrumb li a:hover {
             <h1><i>Wedding Special Delight's</i></h1>
             <img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
             <ul class="breadcrumb">
-              <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+              <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
               <li><a href="#">Wedding</a></li>
             </ul>
             <br><br><br><br>
