--- a/ballerina cakes-main/aboutus.html
+++ b/ballerina cakes-main/aboutus.html
@@ -26,7 +26,7 @@ h4 {
 }   
         
      .bg {
-background-image: url("file:///C:/Users/yachi/OneDrive/Pictures/cakeshop%20images/cak.jpg");
+background-image: url("ballerina-cakes-main/cakeshop%20images/cak.jpg");
 height: 70%;
 background-position: center;
 background-repeat: no-repeat;
@@ -98,13 +98,13 @@ ul.breadcrumb li a:hover {
         <body>
             <h1><i>About Us</i></h1>
             <ul class="breadcrumb">
-                <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+                <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
                 <li><a href="#">About us</a></li>
               </ul>
             <br><br><br><br>
             <div class = "bg">
                 <aside>
-                    <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
+                    <img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
                     <h3><i>Our Story</i></h3>
                     <p class ="p1"><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Suspendisse nisi et dolor ornare pellentesque.<br> odio id facilisis dapibus, <br>mauris dolor rhoncus elit, ultricies nulla eros at dui. <br>In suscipit leo sagittis aliquam. Integer tristique .<br> et pharetra dui urna volutpat.</i></p>
                        </aside>
@@ -112,7 +112,7 @@ ul.breadcrumb li a:hover {
                 <br><br><br><br>
                 <div class = "bg1">
                 <h4><i>Our Mission</i></h4>
-                <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\divider_1.png" alt = "divider_1" class = "img2">
+                <img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider_1" class = "img2">
                 </div>
         
         </body>
