--- a/ballerina cakes-main/cart page.html
+++ b/ballerina cakes-main/cart page.html
@@ -2,7 +2,7 @@
     <head>
         <title>cart</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="ballerina-cakes-main/4.7.0/css/font-awesome.min.css">
 <style>
 body {
 background-color:  #df9fbf;
@@ -144,7 +144,7 @@ ul.breadcrumb li a:hover {
 
 <h1><i>Cart</i></h1>
 <ul class="breadcrumb">
-  <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+  <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
   <li><a href="#">Cart</a></li>
 </ul>
 <br><br><br><br>
@@ -159,7 +159,7 @@ ul.breadcrumb li a:hover {
         <hr>
         <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
       </div>
-      <a href = "file:///C:/Users/yachi/Downloads/checkoutpage.html"><input type = "button" value = "proceed to checkout" class = "btn"></a>
+      <a href = "ballerina-cakes-main/checkoutpage.html"><input type = "button" value = "proceed to checkout" class = "btn"></a>
     </div>
   </div>
   
