--- a/ballerina cakes-main/checkerboard page.html
+++ b/ballerina cakes-main/checkerboard page.html
@@ -83,7 +83,7 @@ ul.breadcrumb li a:hover {
         <body>
             <h1><i>Checkerboard</i></h1>
             <ul class="breadcrumb">
-                <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+                <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
                 <li><a href="#">Checkerboard</a></li>
               </ul>
             <br><br><br><br>
@@ -91,13 +91,13 @@ ul.breadcrumb li a:hover {
             <aside class = "aside1">
                 <p><i>Nothing like Blueberry Macaroon</i></p>
                    </aside>
-                   <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-2.jpg" alt ="image-1" class = "img1">
+                   <img src = "ballerina-cakes-main\cakeshop images\blog-2.jpg" alt ="image-1" class = "img1">
 
                    <br><br>
                    <aside class = "aside2">
                     <p><i>Nothing like the Strawberry   Pastry</i></p>
                        </aside>
-                       <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-4.jpg" alt ="image-2" class = "img2">
+                       <img src = "ballerina-cakes-main\cakeshop images\blog-4.jpg" alt ="image-2" class = "img2">
                       
                     
 
@@ -106,14 +106,14 @@ ul.breadcrumb li a:hover {
                        <aside class = "aside3">
                         <p><i>Nothing like the Rainbow Muffins</i></p>
                            </aside>
-                           <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-5.jpg" alt ="image-3" class = "img3">
+                           <img src = "ballerina-cakes-main\cakeshop images\blog-5.jpg" alt ="image-3" class = "img3">
 
                            <br><br>
 
                            <aside class = "aside4">
                             <p ><i>Nothing like the Blended Popsicles</i></p>
                                </aside>
-                                <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\blog-7.jpg" alt ="image-4" class = "img4">
+                                <img src = "ballerina-cakes-main\cakeshop images\blog-7.jpg" alt ="image-4" class = "img4">
 
         </body>
         </html>
