--- a/ballerina cakes-main/contactpage.html
+++ b/ballerina cakes-main/contactpage.html
@@ -93,14 +93,14 @@ ul.breadcrumb li a:hover {
         <body>
 <h1><i>Contacts</i></h1>
 <ul class="breadcrumb">
-  <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+  <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
   <li><a href="#">Contact</a></li>
 </ul>
 <br><br><br><br>
-<img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
+<img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
 <h2><i>Our Contacts</i></h2>
 <br><br>
-<img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\icon-devider-gray.png" alt = "divider_1" class = "img2">
+<img src = "ballerina-cakes-main\cakeshop images\icon-devider-gray.png" alt = "divider_1" class = "img2">
 <h3><i>Send Message</i></h3>
 <br><br>
 <div class="container">
