--- a/ballerina cakes-main/our staff page.html
+++ b/ballerina cakes-main/our staff page.html
@@ -88,24 +88,24 @@ ul.breadcrumb li a:hover {
 
         <body>
             <h1><i>Our Staff</i></h1>
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\slider_bg_4.png" alt = "divider_2_light" class = "img1">
+            <img src = "ballerina-cakes-main\cakeshop images\slider_bg_4.png" alt = "divider_2_light" class = "img1">
             <ul class="breadcrumb">
-                <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+                <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
                 <li><a href="#">Our staff</a></li>
               </ul>
             <br><br><br><br>
             <div class = "bg">
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\divider_1.png" alt = "divider_1" class = "img2">
+            <img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider_1" class = "img2">
             <h1><i>Our Staff</i></h1>
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\team-1.jpg" alt = "chef1" class = "img3">
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\team-4.jpg" alt = "chef2" class = "img4">
+            <img src = "ballerina-cakes-main\cakeshop images\team-1.jpg" alt = "chef1" class = "img3">
+            <img src = "ballerina-cakes-main\cakeshop images\team-4.jpg" alt = "chef2" class = "img4">
             </div>
             <br><br>
             <div class = "bg1">
                 <aside>
                     <p><i>Alex Doe<br>Masterchef</i></p>
                        </aside>
-                       <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\hat (1).png" alt ="hat (1)" class = "img5">
+                       <img src = "ballerina-cakes-main\cakeshop images\hat (1).png" alt ="hat (1)" class = "img5">
             </div>
 
         </body>
