--- a/ballerina cakes-main/weddingpage.html
+++ b/ballerina cakes-main/weddingpage.html
@@ -119,26 +119,26 @@ ul.breadcrumb li a:hover {
 
         <body>
             <h1><i>Wedding Special Delight's</i></h1>
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
+            <img src = "ballerina-cakes-main\cakeshop images\divider_1.png" alt = "divider_1" class = "img1">
             <ul class="breadcrumb">
-              <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+              <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
               <li><a href="#">Wedding</a></li>
             </ul>
             <br><br><br><br>
          <aside>
          <p><i>Special Wedding Cake</i></p>
             </aside>
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\recipe_1-removebg-preview.png" alt ="recipe_1-removebg-preview" class = "img2">
+            <img src = "ballerina-cakes-main\cakeshop images\recipe_1-removebg-preview.png" alt ="recipe_1-removebg-preview" class = "img2">
             <br><br><br><br><br>
 
             <h2><i>Our Special's</i></h2>
-            <img src = "C:\Users\yachi\OneDrive\Pictures\cakeshop images\slider_bg_4.png" alt = "slider_bg_4" class = "img3">
+            <img src = "ballerina-cakes-main\cakeshop images\slider_bg_4.png" alt = "slider_bg_4" class = "img3">
             <br><br><br><br>
         
             <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\6-10.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\6-10.jpg" alt="Cinque Terre" width="800" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\6-10.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\6-10.jpg" alt="Cinque Terre" width="800" height="600">
                   </a>
                   <div class="desc"><i>Dazzle white</i></div>
                 </div>
@@ -146,8 +146,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\6-12.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\6-12.jpg" alt="Cinque Terre" width="800" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\6-12.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\6-12.jpg" alt="Cinque Terre" width="800" height="600">
                   </a>
                   <div class="desc"><i>Macaroon gem</i></div>
                 </div>
@@ -156,8 +156,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\6-11.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\6-11.jpg" alt="Cinque Terre" width="800" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\6-11.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\6-11.jpg" alt="Cinque Terre" width="800" height="600">
                   </a>
                   <div class="desc"><i>British rose </i></div>
                 </div>
